Bug 18162 - aarch64 compile server issue
Summary: aarch64 compile server issue
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: server (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-25 15:35 UTC by Martin Cermak
Modified: 2015-03-25 19:54 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Cermak 2015-03-25 15:35:30 UTC
Attempt to use localhost as a compile server fails on aarch64:

=======
# stap --use-server=127.0.0.1:49139 -v -e 'probe begin { log("hello"); exit() }'
Using a compile server.
Pass 1: parsed user script and 103 library script(s) using 156224virt/40768res/6080shr/31552data kb, in 390usr/20sys/402real ms.
Pass 2: analyzed script: 1 probe(s), 2 function(s), 0 embed(s), 0 global(s) using 156800virt/40768res/6080shr/32128data kb, in 0usr/0sys/8real ms.
Pass 3: translated to C into "<server>/stap000000/stap_8c6be4bb35d99d58d100504093f86cd3_1064_src.c" using 156800virt/43136res/7232shr/32128data kb, in 0usr/0sys/1real ms.
Makefile:612: arch/aarch64/Makefile: No such file or directory
make: *** No rule to make target `arch/aarch64/Makefile'.  Stop.
WARNING: kbuild exited with status: 2
Pass 4: compiled C into "stap_8c6be4bb35d99d58d100504093f86cd3_1064.ko" in 160usr/0sys/400real ms.
Pass 4: compilation failed.  [man error::pass4]
Passes: via server  host=unknown address=127.0.0.1 port=49139 sysinfo="unknown" version=unknown certinfo="unknown" using 126336virt/12800res/7872shr/1152data kb, in 130usr/10sys/1217real ms.
Passes: via server failed.  Try again with another '-v' option.
#
=======

Tested with RPMs based on 07a1c23.
Comment 1 Frank Ch. Eigler 2015-03-25 19:54:13 UTC
commit 7dde4b6e8c0f