PR18162: map aarch64->arm64 for stap-server -a use

There are two "uname -m" -> linux $ARCH mappings
in the source tree.  They got out of whack for aarch64.
They are now back in whack.

+  # NB: see also util.cxx (normalize_machine)
+  // NB repeated: see also stap-env (stap_get_arch)